--- a/appointment_management/views/views.xml
+++ b/appointment_management/views/views.xml
@@ -29,6 +29,7 @@
                     <group>
                         <group>
                             <field name="patient_id" options="{'no_create': True}"/>
+                            <field name="patient_name"/>
                             <field name="staff_id" options="{'no_create': True}"/>
                             <field name="appointment_date"/>
                             <field name="room_id" options="{'no_create': True}"/>
